# launched

./: CNAME  MEMORY.md  index.html  logs.html  package-lock.json  package.json  update.json  vite.config.ts
appimage/: Launched_0.1.0_amd64.AppImage.sig  Launched_1.0.0_amd64.AppImage.sig  Launched_1.1.0_amd64.AppImage.sig  Launched_1.1.1_amd64.AppImage.sig  Launched_1.1.4_amd64.AppImage.sig  Launched_1.1.5_amd64.AppImage.sig  Launched_1.1.6_amd64.AppImage.sig  launched_0.1.0_amd64.AppImage.sig
deb/: Launched_0.1.0_amd64.deb.sig  Launched_1.0.0_amd64.deb.sig  Launched_1.1.0_amd64.deb.sig  Launched_1.1.1_amd64.deb.sig  Launched_1.1.4_amd64.deb.sig  Launched_1.1.5_amd64.deb.sig  Launched_1.1.6_amd64.deb.sig  launched_0.1.0_amd64.deb.sig
rpm/: Launched-0.1.0-1.x86_64.rpm.sig  Launched-1.0.0-1.x86_64.rpm.sig  Launched-1.1.0-1.x86_64.rpm.sig  Launched-1.1.1-1.x86_64.rpm.sig  Launched-1.1.4-1.x86_64.rpm.sig  Launched-1.1.5-1.x86_64.rpm.sig  Launched-1.1.6-1.x86_64.rpm.sig  launched-0.1.0-1.x86_64.rpm.sig
src/: App.tsx  logs.ts  main.ts  main.tsx  shoelace.d.ts  state.ts  style.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/auth/: microsoft.rs  mod.rs  secrets.rs
src-tauri/src/auth/microsoft/: models.rs
src-tauri/src/core/: launch.rs  mod.rs  session.rs  settings.rs  sync.rs
src-tauri/src/core/install/: fabric.rs  forge.rs  mod.rs  mojang.rs
src-tauri/src/core/launch/: args.rs  mod.rs  models.rs
src-tauri/src/ui/: bridge.rs
src/render/: app.ts  (+1 more)
(+65 files in other folders)
