[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
reqwest = { version = "0.13.2", features = ["json", "form"] }
async-trait = "0.1.89"
tokio = { version = "1.51.1", features = ["full"] }
md5 = "0.8.0"
open = "5.3.3"
tauri-plugin-opener = "2.5.3"
arboard = "3.6.1"
which = "8.0.2"
zip = { version = "2", default-features = false, features = ["deflate"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
sysinfo = "0.30"
